fix(DropdownMenu): resolve auto scroll wrong height (#1788)

--- a/src/dropdown-item/dropdown-item.less
+++ b/src/dropdown-item/dropdown-item.less
@@ -57,7 +57,7 @@
   }
 
   &__scroll {
-    height: @dropdown-body-max-height;
+    max-height: @dropdown-body-max-height;
   }
 
   &__footer {
